--- a/src/App.css
+++ b/src/App.css
@@ -6,9 +6,9 @@
 }
 
 body {
-  background-size: cover;
-  background-attachment: scroll;
   background-position: 50% 50%;
-  background-color: transparent;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 100%;
   background-image: url('./assets/homeBackground.png');
 }
