--- a/src/components/About/NftCard.css
+++ b/src/components/About/NftCard.css
@@ -1,5 +1,5 @@
 .nftCardContainer {
-  min-height: 100px;
+  min-height: 200px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -11,17 +11,43 @@
   background: white;
 }
 
+.stakedNftContainer {
+  min-height: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  box-shadow: rgb(25 19 38 / 70%) 0px 2px 12px -8px, rgb(25 19 38 / 5%) 0px 1px 1px;
+  justify-content: center;
+  border-radius: 20px;
+  padding: 10px;
+  gap: 5px;
+  background: white;
+}
+
+@media (max-width:450px) {
+  .stakedNftContainer {
+    min-height: 550px;
+  }
+}
+
 .nftIMG {
   box-shadow: rgb(25 19 38 / 70%) 0px 2px 12px -8px, rgb(25 19 38 / 5%) 0px 1px 1px;
-  width: 200px;
+  width: 150px;
   height: 200px;
+  border-radius: 20px;
+}
+
+.stakenftIMG {
+  box-shadow: rgb(25 19 38 / 70%) 0px 2px 12px -8px, rgb(25 19 38 / 5%) 0px 1px 1px;
+  width: 150px;
+  height: 150px;
   border-radius: 20px;
 }
 
 @media (max-width: 480px) {
   .nftIMG {
-    width: 80px;
-    height: 80px;
+    width: 120px;
+    height: 120px;
     border-radius: 20px;
   }
 }
