--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,5 +1,13 @@
 #about {
   padding-top: 2%;
+  padding-bottom: 3%;
+  min-height: 1080px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 100%;
+  background-image: url('../../assets/homeBackground.png');
+  margin: 0px !important;
 }
 
 .about-row {
@@ -103,7 +111,7 @@
   background-repeat: no-repeat;
   color: white;
   border: none;
-  height: 60px;
+  height: 80px;
   font-weight: 700;
   font-size: 20px;
   padding: 15px;
