--- a/src/components/About/NftCard.css
+++ b/src/components/About/NftCard.css
@@ -3,12 +3,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  box-shadow: rgb(25 19 38 / 70%) 0px 2px 12px -8px, rgb(25 19 38 / 5%) 0px 1px 1px;
+  box-shadow: rgba(217, 215, 223, 0.7) 0px 2px 12px -8px, rgba(200, 198, 204, 0.05) 0px 1px 1px;
   justify-content: center;
   border-radius: 20px;
   padding: 10px;
   gap: 5px;
-  background: white;
+  background-color: rgb(34, 33, 33) !important;
 }
 
 .stakedNftContainer {
@@ -16,12 +16,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  box-shadow: rgb(25 19 38 / 70%) 0px 2px 12px -8px, rgb(25 19 38 / 5%) 0px 1px 1px;
   justify-content: center;
   border-radius: 20px;
   padding: 10px;
   gap: 5px;
-  background: white;
+  background-color: rgb(34, 33, 33) !important;
 }
 
 @media (max-width:450px) {
@@ -31,14 +30,14 @@
 }
 
 .nftIMG {
-  box-shadow: rgb(25 19 38 / 70%) 0px 2px 12px -8px, rgb(25 19 38 / 5%) 0px 1px 1px;
+  box-shadow: rgba(132, 131, 134, 0.7) 0px 2px 12px -8px, rgb(25 19 38 / 5%) 0px 1px 1px;
   width: 150px;
   height: 200px;
   border-radius: 20px;
 }
 
 .stakenftIMG {
-  box-shadow: rgb(25 19 38 / 70%) 0px 2px 12px -8px, rgb(25 19 38 / 5%) 0px 1px 1px;
+  box-shadow: rgba(217, 215, 223, 0.7) 0px 2px 12px -8px, rgba(200, 198, 204, 0.05) 0px 1px 1px;
   width: 150px;
   height: 150px;
   border-radius: 20px;
